--- a/package.json
+++ b/package.json
@@ -9,11 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.9.3",
+    "@emotion/react": "^11.9.3",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.9.3",
+    "@fontsource/roboto": "^4.5.7",
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.87",
+    "@mui/material": "^5.8.5",
+    "@reduxjs/toolkit": "^1.8.2",
+    "@types/material-ui": "^0.21.12",
+    "axios": "^0.27.2",
+    "moment": "^2.29.3",
     "next": "12.1.6",
+    "next-redux-wrapper": "^7.0.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-error-boundary": "^3.1.4",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.2.1",
+    "@types/node": "^18.0.0",
     "@types/react": "18.0.14",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
